# ChatGPT_x_SEC

./: README.md  pyproject.toml
backend/data_collection/: downloader.py
data/tickers/: all_sector_mapped.csv  communication_mapped.csv  consumer_cyclical_mapped.csv  consumer_discretionary_mapped.csv  energy_mapping.csv  financials_mapped.csv  healthcare_mapped.csv  industrials_mapped.csv  information_tech_mapped.csv  materials_mapping.csv  real_estate_mapped.csv  utilities_mapped.csv
frontend/: index.html
frontend/static/: style.css
frontend/templates/: base.html
notebooks/: 01_ticker_cik_mapping.ipynb  02_ticker_filtration.ipynb  03_sec_scraping.ipynb
