[tool.poetry]
name = "chatgpt-x-sec"
version = "0.1.0"
description = "SEC 10-K and 10-Q retrieval, NLP-driven precise section extraction, and ChatGPT-powered summaries tailored for diverse stakeholders."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
